--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,17 @@
+
 @import url("./normalaze.css");
 @import url("./fonts.css");
 
+
+:root{
+  --text-color:#333333;  
+  --shadow-color:rgba(19,182,255,24%);
+  --app-bg-color:#fff; 
+  --section-bg-color:#fff;
+}
 html {
     box-sizing: border-box;
+    font-size: 10px;
 }
 
 *,
@@ -13,6 +22,9 @@ html {
 
 body {
     margin: 0;
+    font-family: "Poppins";
+    line-height: 1.5rem;
+    font-size: 1.6rem;
 }
 
 .container {
@@ -101,6 +113,3 @@ body {
     width: 100%;
     flex: 0 0 auto;
 }
-
-
-
