--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,17 @@
-
 @import url("./normalaze.css");
 @import url("./fonts.css");
 
 
-:root{
-  --text-color:#333333;  
-  --shadow-color:rgba(19,182,255,24%);
-  --app-bg-color:#fff; 
-  --section-bg-color:#fff;
+:root {
+    --text-color: #333333;
+    --shadow-color: rgba(19, 182, 255, 24%);
+    --app-bg-color: #fff;
+    --section-bg-color: #fff;
+    --f-Poppins-bold:"Poppins Bold";
+    --f-Poppins-Sebold:"Poppins SemiBold";
+    --f-Poppins-black:"Poppins Black";
 }
+
 html {
     box-sizing: border-box;
     font-size: 10px;
@@ -23,7 +26,7 @@ html {
 body {
     margin: 0;
     font-family: "Poppins";
-    line-height: 1.5rem;
+    line-height: 2rem;
     font-size: 1.6rem;
 }
 
@@ -113,3 +116,55 @@ body {
     width: 100%;
     flex: 0 0 auto;
 }
+
+
+/* 
+
+
+//  start project
+
+
+*/
+
+
+.header {
+    box-shadow:2px 3px 10px 5px  var(--shadow-color);
+    
+}
+
+.nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav__text {
+    color: rgb(47, 170, 170);
+    font-family: var(--f-Poppins-black);
+    font-size: 5rem;
+}
+
+.menu {
+    list-style-type: none;
+    display: flex;
+  
+}
+
+.menu__item {
+    margin-left: 4rem;
+}
+
+.menu__link {
+    text-decoration: none;
+    color: var(--text-color);
+}
+
+.menu__link--active {
+    color: rgb(47, 170, 170);
+}
+
+.nav__btn {
+    
+}
+
+.nav__btn-line {}
