--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
 
 :root {
     --text-color: #333333;
-   
+
     --app-bg-color: #fff;
     --section-bg-color: #fff;
     --primery--color: #0abead;
@@ -147,7 +147,7 @@ ul {
 
 
 .header {
-    box-shadow: 0 0.5rem 4rem rgba(4,195,255,16%);
+    box-shadow: 0 0.5rem 4rem rgba(4, 195, 255, 16%);
 
 }
 
@@ -158,7 +158,7 @@ ul {
 }
 
 .nav__text {
-    color:var(--primery--color);
+    color: var(--primery--color);
     font-family: var(--f-Poppins-black);
     font-size: 5rem;
 }
@@ -167,11 +167,13 @@ ul {
     list-style-type: none;
     display: flex;
     font-size: 1.3rem;
-    
+
 }
-.menu__item:first-child{
-     margin-left: 0;
+
+.menu__item:first-child {
+    margin-left: 0;
 }
+
 .menu__item {
     margin-left: 4rem;
 }
@@ -183,15 +185,43 @@ ul {
 }
 
 .menu__link--active {
-   color: var(--primery--color);
+    color: var(--primery--color);
 }
 
 .nav__btn {
     display: none;
+    background-color: var(--app-bg-color);
+    width: 5rem;
+    height: 5rem;
+    border-radius: 1.5rem;
+    align-items: center;
+    justify-content: center;
 }
 
-.nav__btn-line {}
+.nav__btn-line {
+    position: relative;
+}
 
+.nav__btn::before,
+.nav__btn::after,
+.nav__btn-line {
+    content: " ";
+    width: 3rem;
+    height: .3rem;
+    border-radius: 2rem;
+    background-size: cover;
+    background-position: center;
+    background-color: var(--primery--color);
+}
 
+.nav__btn::before {
+    position: absolute;
+    top: 2.7rem;
+    bottom: 0;
+}
 
-
+.nav__btn::after {
+    position: absolute;
+    top: 4.3rem;
+    bottom: 0;
+}
