--- a/styles/style.css
+++ b/styles/style.css
@@ -36,6 +36,7 @@ body {
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
+    position: relative;
 }
 
 .row {
@@ -167,6 +168,7 @@ ul {
     list-style-type: none;
     display: flex;
     font-size: 1.3rem;
+  
 
 }
 
@@ -238,4 +240,7 @@ ul {
 }
 .nav__btn--open .nav__btn-line{
     background: transparent;
+}
+.nav__btn--open .menu{
+ 
 }
