--- a/styles/style.css
+++ b/styles/style.css
@@ -149,7 +149,7 @@ ul {
 
 .header {
     box-shadow: 0 0.5rem 4rem rgba(4, 195, 255, 16%);
-
+   z-index: 100;
 }
 
 .nav {
@@ -168,7 +168,7 @@ ul {
     list-style-type: none;
     display: flex;
     font-size: 1.3rem;
-  
+    z-index: 100;
 
 }
 
@@ -184,8 +184,11 @@ ul {
     text-decoration: none;
     color: var(--text-color);
     font-family: "Poppins Medium";
+    transition: color 200ms ease-in;
 }
-
+.menu__link:hover {
+  color: var(--primery--color);
+}
 .menu__link--active {
     color: var(--primery--color);
 }
@@ -241,6 +244,15 @@ ul {
 .nav__btn--open .nav__btn-line{
     background: transparent;
 }
-.nav__btn--open .menu{
- 
+
+
+.cover{
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,10%);
+    z-index: -1;
+    opacity: 0;
 }
