--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -24,7 +24,7 @@
         justify-content: center;
         height: 0;
         overflow: hidden;
-        transition: all 200ms ease-in;
+        transition: all 100ms ease-in;
     }
     .menu-open{
         height: 33rem;
@@ -40,7 +40,22 @@
         margin-top: 2rem;
 
     }
-
+    .cover {
+        position: fixed;
+        top: 7.36rem;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 5%);
+        z-index: -1;
+        opacity: 0;
+        transition: all ease-in 200ms;
+    }
+    
+    .cover--show {
+        opacity: 1;
+        z-index: 99;
+    }
     .nav__btn {
         display: flex;
     }
