--- a/styles/style.css
+++ b/styles/style.css
@@ -149,7 +149,10 @@ ul {
 
 .header {
     box-shadow: 0 0.5rem 4rem rgba(4, 195, 255, 16%);
-   z-index: 100;
+    z-index: 100;
+    position: fixed;
+    right: 0;
+    left: 0;
 }
 
 .nav {
@@ -170,6 +173,7 @@ ul {
     font-size: 1.3rem;
     z-index: 100;
 
+
 }
 
 .menu__item:first-child {
@@ -186,9 +190,11 @@ ul {
     font-family: "Poppins Medium";
     transition: color 200ms ease-in;
 }
+
 .menu__link:hover {
-  color: var(--primery--color);
+    color: var(--primery--color);
 }
+
 .menu__link--active {
     color: var(--primery--color);
 }
@@ -215,7 +221,7 @@ ul {
     width: 3rem;
     height: .3rem;
     border-radius: 2rem;
-   
+
     background-position: center;
     background-color: var(--primery--color);
     transition: all 150ms ease-in;
@@ -223,9 +229,9 @@ ul {
 
 .nav__btn-line::before {
     position: absolute;
-    top:-1rem;
+    top: -1rem;
     bottom: 0;
-    
+
 
 }
 
@@ -234,25 +240,18 @@ ul {
     top: 1rem;
     bottom: 0;
 }
-.nav__btn--open .nav__btn-line::after{
+
+.nav__btn--open .nav__btn-line::after {
     transform: translateY(-1rem) rotate(45deg);
 
 }
-.nav__btn--open .nav__btn-line::before{
+
+.nav__btn--open .nav__btn-line::before {
     transform: translateY(1rem) rotate(-45deg);
 }
-.nav__btn--open .nav__btn-line{
+
+.nav__btn--open .nav__btn-line {
     background: transparent;
 }
 
 
-.cover{
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,10%);
-    z-index: -1;
-    opacity: 0;
-}
