--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -9,6 +9,9 @@
     .menu__item {
         margin-left: 3rem;
     }
+    .head__shape {
+        left: -3.5rem;
+    }
 }
 
 @media screen and (max-width:768px) {
@@ -59,6 +62,30 @@
     .nav__btn {
         display: flex;
     }
+    .row{
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+    }
+    .main__left{
+        margin-top: 0;
+        text-align: center;
+    }
+    .head__shape {
+        display: none;
+    }
+    .col-6{
+        width: 60%;
+    }
 }
 
-@media screen and (max-width:576px) {}
+@media screen and (max-width:576px) {
+    .col-6{
+        width: 90%;
+    }
+}
+@media screen and (max-width:346px) {
+    .col-6{
+        width: 100%
+    }
+}
